--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
 	"version": "1.0.0",
 	"description": "The Flickity carousel as a Vue component",
 	"main": "esm/index.js",
-	"scripts": {
-	},
+	"scripts": {},
 	"repository": "git://github.com/romancow/v-flickity.git",
 	"keywords": [
 		"vue",
@@ -17,5 +16,20 @@
 	"bugs": {
 		"url": "https://github.com/romancow/v-flickity/issues"
 	},
-	"homepage": "https://github.com/romancow/v-flickity#readme"
+	"homepage": "https://github.com/romancow/v-flickity#readme",
+	"dependencies": {
+		"flickity": "^2.2.2"
+	},
+	"devDependencies": {
+		"@types/flickity": "^2.2.6",
+		"typescript": "^4.3.5",
+		"vue": "^2.6.14",
+		"vue-class-component": "^7.2.6",
+		"vue-property-decorator": "^9.1.2"
+	},
+	"peerDependencies": {
+		"vue": "2",
+		"vue-class-component": "7",
+		"vue-property-decorator": "9"
+	}
 }
