--- a/package.json
+++ b/package.json
@@ -22,14 +22,10 @@
 	},
 	"devDependencies": {
 		"@types/flickity": "^2.2.6",
-		"typescript": "^4.3.5",
-		"vue": "^2.6.14",
-		"vue-class-component": "^7.2.6",
-		"vue-property-decorator": "^9.1.2"
+		"typescript": "^4.4.2",
+		"vue": "^2.6.14"
 	},
 	"peerDependencies": {
-		"vue": "2",
-		"vue-class-component": "7",
-		"vue-property-decorator": "9"
+		"vue": "2"
 	}
 }
