--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+/node_modules
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -108,3 +108,10 @@ dist
 
 # Visual Studio Code settings
 .vscode/
+
+# nosync directory
+.nosync/
+
+# TypeScript compiled & types
+/build
+/types
